--- a/M293/css-stuff/dashboard/index.html
+++ b/M293/css-stuff/dashboard/index.html
@@ -13,16 +13,20 @@
         <div>menu 2</div>
         <div>menu 3</div>
     </div>
-    <div class="side-menu">
-        <div>menu 1</div>
-        <div>menu 2</div>
-        <div>menu 3</div>
+
+    <div class="main-content">
+        <div class="side-menu">
+            <div>menu 1</div>
+            <div>menu 2</div>
+            <div>menu 3</div>
+        </div>
+        <div class="items">
+            <div>item 1</div>
+            <div>item 2</div>
+            <div>item 3</div>
+        </div>
     </div>
-    <div class="items">
-        <div>item 1</div>
-        <div>item 2</div>
-        <div>item 3</div>
-    </div>
+
     <div class="footer">Footer</div>
 </body>
 </html>
